Test EMF using subnetworks (bump core to 6.0.0, open-loadflow to 1.3.0) (#104)
* test emf using subnetworks
* migration after changes in scalable (float to double in percentages))
* migration to next version of core and open-loadflow
---------

Signed-off-by: Luma <zamarrenolm@aia.es>